added model files to git ignore

--- a/lstm-spam-api/.gitignore
+++ b/lstm-spam-api/.gitignore
@@ -6,6 +6,9 @@ datasets/zips/
 datasets/spam_classification/
 datasets/exports/spam-tokenizer.json
 datasets/exports/spam-metadata.pkl
+datasets/exports/spam-classifer-metadata.json
+datasets/exports/spam-classifer-tokenizer.json
+datasets/exports/spam-model.h5
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
