Add .code-workspace and pyvenv.cfg to .gitignore

--- a/lstm-spam-api/.gitignore
+++ b/lstm-spam-api/.gitignore
@@ -2,6 +2,8 @@ bin/
 etc/
 include/
 share/
+lstm-spam-api.code-workspace
+pyvenv.cfg
 datasets/zips/
 datasets/spam_classification/
 datasets/exports/spam-tokenizer.json
