--- a/lstm-spam-api/pipelines/ai-model-download.yaml
+++ b/lstm-spam-api/pipelines/ai-model-download.yaml
@@ -13,9 +13,23 @@ steps:
   - name: pypyr.steps.py
     in:
       py: |
+        import boto3
         import os
         import pathlib
         from dotenv import load_dotenv
         load_dotenv()
         dest_path = pathlib.Path(local_dest_dir).resolve()
-        print(dest_path)
+        dest_path.mkdir(parents=True, exist_ok=True)
+        session = boto3.Session()
+        bucket_name = os.environ.get("BUCKET_NAME")
+        region_name = os.environ.get("REGION_NAME")
+        endpoint_url = os.environ.get("ENDPOINT_URL") or None
+        client = session.client(
+            "s3",
+            region_name=region_name,
+            endpoint_url=endpoint_url,
+        )
+        for key in file_keys:
+            fname = pathlib.Path(key).name
+            dl_path = dest_path / fname
+            client.download_file(bucket_name, key, str(dl_path))
