--- a/lstm-spam-api/.gitignore
+++ b/lstm-spam-api/.gitignore
@@ -14,6 +14,7 @@ datasets/exports/*.json
 datasets/exports/spam-metadata.pkl
 datasets/exports/spam-model.h5
 app/main_prev.py
+app/ignored/
 
 
 # Byte-compiled / optimized / DLL files
